# digital-signature

./: .eslintrc.cjs  .gitignore  .stylelintrc.json  CHANGELOG.md  Makefile  README.adoc  cliff.toml  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taplo.toml  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: tauri-ci.yml  tauri-release.yml  tauri.yml
src/: App.vue  command.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/crypto/: Cargo.toml
src-tauri/crypto/src/: error.rs  from_file.rs  key_pair.rs  keygen.rs  lib.rs  secret_file.rs  signing.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  fs.rs  keygen.rs  main.rs  sign.rs  verify.rs
src/components/: ColorSwitcher.vue  FileSelector.vue  FilesSelector.vue
src/utils/: index.ts
src/utils/tauri/: event.ts
src/views/: KeygenView.vue  SignView.vue  ValidateView.vue
