[workspace]
members = ["crypto"]

[workspace.package]
authors = ["Jisu-Woniu"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Jisu-Woniu/digital-signature/"
version = "1.3.0"

[package]
name = "digital-signature"
description = "A Tauri app for signing files"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
digital-signature-crypto = { path = "crypto" }
futures = "0.3.31"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.1", features = ["config-toml"] }
tauri-plugin-devtools = { version = "2.0.0", optional = true }
tauri-plugin-dialog = "2.2.0"
tokio = { version = "1.42.0", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["dep:tauri-plugin-devtools"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
