[workspace]
members = ["crypto"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Jisu-Woniu/digital-signature/"
version = "1.3.0"

[package]
name = "digital-signature"
description = "A Tauri app for signing files"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
digital-signature-crypto = { path = "crypto" }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["config-toml"] }
tauri-plugin-devtools = { version = "2.0.1", optional = true }
tauri-plugin-dialog = "2.6.0"
tokio = { version = "1.50.0", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["dep:tauri-plugin-devtools"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
