[workspace]
members = ["crypto"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Jisu-Woniu/digital-signature/"
version = "1.4.0"

[package]
name = "digital-signature"
description = "A Tauri app for signing files"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
digital-signature-crypto = { path = "crypto" }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.0", features = ["config-toml"] }
tauri-plugin-devtools = { version = "2.1.0", optional = true }
tauri-plugin-dialog = "2.7.0"
tokio = { version = "1.52.1", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["dep:tauri-plugin-devtools"]

[profile.release]
lto = true
panic = "abort"
strip = true
