[package]
name = "digital-signature-crypto"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
futures = "0.3.32"
hex = "0.4.3"
pgp = "0.19.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
thiserror = "2.0.18"
tokio-util = { version = "0.7.18", features = ["io-util"] }
zeroize = "1.8.2"

[dependencies.tokio]
features = ["fs", "io-util"]
version = "1.50.0"

[dev-dependencies]
tempfile = "3.27.0"

[dev-dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.50.0"
