[package]
name = "digital-signature-crypto"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
futures = "0.3.32"
hex = "0.4.3"
pgp = "0.19.0"
rand = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
thiserror = "2.0.18"
zeroize = "1.8.2"

[dependencies.tokio]
features = ["fs", "io-util"]
version = "1.52.1"

[dev-dependencies]
tempfile = "3.27.0"

[dev-dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.52.1"
